--- a/BeamWallet/ViewControllers/Main/UTXO/UTXOViewController.xib
+++ b/BeamWallet/ViewControllers/Main/UTXO/UTXOViewController.xib
@@ -12,15 +12,62 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UTXOViewController" customModule="BeamWallet" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="headerView" destination="ker-Nr-F41" id="IaU-aa-dpI"/>
+                <outlet property="tableView" destination="oVk-An-Dah" id="9Xl-mA-Qwj"/>
+                <outlet property="view" destination="TGE-Jg-fXf" id="fEw-0K-bsr"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="TGE-Jg-fXf">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oVk-An-Dah">
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="tAz-Ph-eQm"/>
+                        <outlet property="delegate" destination="-1" id="2OK-EY-2iH"/>
+                    </connections>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <constraints>
+                <constraint firstItem="J4N-rb-XuS" firstAttribute="bottom" secondItem="oVk-An-Dah" secondAttribute="bottom" id="D52-pY-Lwl"/>
+                <constraint firstItem="J4N-rb-XuS" firstAttribute="trailing" secondItem="oVk-An-Dah" secondAttribute="trailing" id="ahZ-JJ-eco"/>
+                <constraint firstItem="oVk-An-Dah" firstAttribute="top" secondItem="J4N-rb-XuS" secondAttribute="top" id="gHg-Gc-4f5"/>
+                <constraint firstItem="oVk-An-Dah" firstAttribute="leading" secondItem="J4N-rb-XuS" secondAttribute="leading" id="ur7-St-3MO"/>
+            </constraints>
+            <viewLayoutGuide key="safeArea" id="J4N-rb-XuS"/>
+        </view>
+        <view contentMode="scaleToFill" id="ker-Nr-F41" customClass="BaseView" customModule="BeamWallet" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="NgI-UR-0fy">
+                    <rect key="frame" x="15" y="6" width="345" height="29.5"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="28.5" id="otQ-8L-VZr"/>
+                    </constraints>
+                    <segments>
+                        <segment title="Active"/>
+                        <segment title="All"/>
+                    </segments>
+                    <color key="tintColor" red="0.0" green="0.96470588239999999" blue="0.82352941180000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <connections>
+                        <action selector="onStatusWithSender:" destination="-1" eventType="valueChanged" id="kzd-dB-vkl"/>
+                    </connections>
+                </segmentedControl>
+            </subviews>
+            <color key="backgroundColor" red="0.10980392160000001" green="0.26274509800000001" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <constraints>
+                <constraint firstItem="NgI-UR-0fy" firstAttribute="leading" secondItem="MLY-Uj-9Hd" secondAttribute="leading" constant="15" id="g2K-5I-JA1"/>
+                <constraint firstItem="MLY-Uj-9Hd" firstAttribute="trailing" secondItem="NgI-UR-0fy" secondAttribute="trailing" constant="15" id="pfs-K4-1w2"/>
+                <constraint firstItem="NgI-UR-0fy" firstAttribute="top" secondItem="MLY-Uj-9Hd" secondAttribute="top" constant="6" id="uyO-qw-sro"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <viewLayoutGuide key="safeArea" id="MLY-Uj-9Hd"/>
+            <point key="canvasLocation" x="53.600000000000001" y="66.11694152923539"/>
         </view>
     </objects>
 </document>
